@@ -1,6 +1,7 @@
 2006-10-23  Daiki Ueno  <ueno@unixuser.org>
 
 	* mixi.el (mixi-curl-retrieve): New function.
+	(mixi-retrieve-function): Don't use NOERROR arg of require.
 
 2006-10-23  OHASHI Akira  <bg66@koka-in.org>
 
